--- a/carzapp/Base.lproj/Main.storyboard
+++ b/carzapp/Base.lproj/Main.storyboard
@@ -35,9 +35,99 @@
                     <view key="view" contentMode="scaleToFill" id="p26-AJ-nZv">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0bB-IF-nB6">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ZD-3j-WcU">
+                                        <rect key="frame" x="8" y="28" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="avi-qO-FH7"/>
+                                            <constraint firstAttribute="width" constant="46" id="ohd-s9-fC2"/>
+                                        </constraints>
+                                        <state key="normal" title="Menu">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="menuClick:" destination="0VW-fE-hAc" eventType="touchUpInside" id="aZd-5K-9Pg"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cars For Sale" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDN-jn-WiX">
+                                        <rect key="frame" x="62" y="32" width="196" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="V8I-A4-JCh"/>
+                                            <constraint firstAttribute="width" constant="196" id="p44-wB-eL5"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.10980392160000001" green="0.53333333329999999" blue="0.78823529410000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="dDN-jn-WiX" firstAttribute="top" secondItem="0bB-IF-nB6" secondAttribute="top" constant="32" id="JSf-kd-OqH"/>
+                                    <constraint firstAttribute="centerX" secondItem="dDN-jn-WiX" secondAttribute="centerX" id="Ojk-wz-ETa"/>
+                                    <constraint firstItem="5ZD-3j-WcU" firstAttribute="leading" secondItem="0bB-IF-nB6" secondAttribute="leading" constant="8" id="edy-gx-WmB"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="ezm-qd-r7C"/>
+                                    <constraint firstAttribute="height" constant="65" id="fjN-JS-5xl"/>
+                                    <constraint firstItem="5ZD-3j-WcU" firstAttribute="top" secondItem="0bB-IF-nB6" secondAttribute="top" constant="28" id="qT2-YW-DJe"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1XO-ue-vKV">
+                                <rect key="frame" x="0.0" y="65" width="320" height="31"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="54 results..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G65-ph-HCt">
+                                        <rect key="frame" x="14" y="6" width="298" height="19"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.70980392160000005" green="0.70980392160000005" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="Irz-Yb-Qlf"/>
+                                    <constraint firstAttribute="trailing" secondItem="G65-ph-HCt" secondAttribute="trailing" constant="8" id="NqM-8S-0pz"/>
+                                    <constraint firstItem="G65-ph-HCt" firstAttribute="top" secondItem="1XO-ue-vKV" secondAttribute="top" constant="6" id="Pke-S3-7Tu"/>
+                                    <constraint firstAttribute="bottom" secondItem="G65-ph-HCt" secondAttribute="bottom" constant="6" id="es5-46-eBR"/>
+                                    <constraint firstItem="G65-ph-HCt" firstAttribute="leading" secondItem="1XO-ue-vKV" secondAttribute="leading" constant="14" id="hn7-3a-lGP"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Iw5-dL-dAd">
+                                <rect key="frame" x="10" y="106" width="300" height="462"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cfs_cell" rowHeight="300" id="8P4-F7-ZcI">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8P4-F7-ZcI" id="rMV-wX-p7E">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Iw5-dL-dAd" secondAttribute="trailing" constant="10" id="2Md-2z-aVd"/>
+                            <constraint firstItem="1XO-ue-vKV" firstAttribute="leading" secondItem="p26-AJ-nZv" secondAttribute="leading" id="5HY-hz-ZIh"/>
+                            <constraint firstItem="Iw5-dL-dAd" firstAttribute="top" secondItem="1XO-ue-vKV" secondAttribute="bottom" constant="10" id="Agd-M7-SRn"/>
+                            <constraint firstAttribute="trailing" secondItem="0bB-IF-nB6" secondAttribute="trailing" id="RTf-JE-bxX"/>
+                            <constraint firstItem="mwU-z8-7VC" firstAttribute="top" secondItem="Iw5-dL-dAd" secondAttribute="bottom" id="hQP-EW-5TP"/>
+                            <constraint firstItem="Iw5-dL-dAd" firstAttribute="leading" secondItem="p26-AJ-nZv" secondAttribute="leading" constant="10" id="jsL-JW-w9x"/>
+                            <constraint firstAttribute="trailing" secondItem="1XO-ue-vKV" secondAttribute="trailing" id="n6S-NH-Cbp"/>
+                            <constraint firstItem="0bB-IF-nB6" firstAttribute="top" secondItem="p26-AJ-nZv" secondAttribute="top" id="rUO-0Y-9eU"/>
+                            <constraint firstItem="0bB-IF-nB6" firstAttribute="leading" secondItem="p26-AJ-nZv" secondAttribute="leading" id="ulM-r0-ZBX"/>
+                            <constraint firstItem="1XO-ue-vKV" firstAttribute="top" secondItem="0bB-IF-nB6" secondAttribute="bottom" id="v33-61-BEG"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="menuButton" destination="5ZD-3j-WcU" id="ULs-dl-ZbX"/>
+                        <outlet property="resultsLabel" destination="G65-ph-HCt" id="ZP7-5G-hQx"/>
+                        <outlet property="tableView" destination="Iw5-dL-dAd" id="cnb-VQ-rbR"/>
+                        <outlet property="topGreyView" destination="1XO-ue-vKV" id="dFC-am-fLO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Lg-Sm-aBR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -69,7 +159,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="menuClick:" destination="JeS-Dk-e9p" eventType="touchUpInside" id="hex-29-TLR"/>
+                                            <action selector="menuClick:" destination="JeS-Dk-e9p" eventType="touchUpInside" id="YrA-zl-kwc"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Carzapp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RtZ-Yf-DMM">
@@ -228,7 +318,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="joinButton" destination="9Ou-Kj-Yoj" id="6Ns-yd-5TL"/>
-                        <outlet property="menuButton" destination="fci-LJ-EuC" id="uCr-lP-9Pp"/>
+                        <outlet property="menuButton" destination="fci-LJ-EuC" id="pGv-oG-683"/>
                         <outlet property="signButton" destination="eha-pg-7Jb" id="aD3-TN-Ao5"/>
                         <outlet property="tableView" destination="f8U-SD-QaD" id="rBJ-4H-eKT"/>
                         <outlet property="triangle1" destination="sS2-90-b4d" id="kmt-Le-VAb"/>
